src/renderer/shared/styles/index.scss
@import './variables.scss';
@import './keyframes.scss';
@import './light-theme.scss';
@import './dark-theme.scss';
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@400;700&display=swap');

* {
  box-sizing: border-box;
  transition-duration: 0.1s;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'IBM Plex Sans KR', sans-serif;
  -webkit-text-size-adjust: antialiased;
  -moz-osx-font-smoothing: grayscale;
  transition: background-color 0.3s, color 0.3s;
}

a {
  color: inherit;
  text-decoration: none;
}

